# FastAPI-Todo-Application

./: README.md  pyproject.toml
fastapi_todo/: main.py
